--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "axios": "^1.5.0",
     "framer-motion": "^10.16.2",
+    "lodash": "^4.17.21",
     "next": "^12.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0"
